--- a/courses/comunicacion-y-didactica.html
+++ b/courses/comunicacion-y-didactica.html
@@ -16,7 +16,7 @@
     <!-- Navigation -->
     <header>
         <div class="container navbar">
-            <div class="logo">Lauren Flor</div>
+            <div class="logo">Lauren Flor-Torres</div>
             <div class="menu-toggle">☰</div>
             <ul class="nav-links">
                 <li><a href="../index.html">Inicio</a></li>
