--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lauren Flor - Docente Pregrado de Astronomía - UdA</title>
+    <title>Lauren Flor - Astrofísica y Docente</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
@@ -35,29 +35,44 @@
     <!-- Hero Section -->
     <section class="hero">
         <div class="container">
-            <h1>Lauren Flor</h1>
+            <h1>Lauren Flor-Torres</h1>
             <p class="subtitle">Astrofísica, Docente y Divulgadora</p>
             <!-- Placeholder for potential profile image or simple decorative element -->
         </div>
     </section>
 
     <!-- About Me Section -->
+    <!-- About Me Section -->
     <section class="about">
         <div class="container">
             <h2>Sobre Mí</h2>
             <p>
-                Hola. Soy Lauren Flor, una apasionada astrofísica dedicada a la investigación y la enseñanza.
-                Mi carrera se centra en desentrañar los misterios del cosmos y compartir ese conocimiento con las nuevas
-                generaciones de científicos.
+                Soy <strong>Lauren Flor Torres</strong>, astrofísica colombiana, profesora universitaria y divulgadora
+                científica.
+                Mi trabajo combina la investigación en astrofísica —especialmente en el estudio de estrellas y
+                exoplanetas—
+                con la educación y la comunicación pública de la ciencia.
             </p>
             <p>
-                Como docente, busco inspirar curiosidad y pensamiento crítico en mis estudiantes a través de cursos de
-                astronomía práctica y fundamentos teóricos.
-                Además, participo activamente en proyectos de divulgación científica para acercar la ciencia a la
-                comunidad.
+                Actualmente soy docente del pregrado de Astronomía de la Universidad de Antioquia, donde busco formar
+                estudiantes con pensamiento crítico, curiosidad científica y una visión amplia del quehacer astronómico,
+                integrando fundamentos teóricos, práctica observacional y reflexión académica.
+            </p>
+            <p>
+                Creo firmemente que la ciencia también se construye fuera del aula. Por eso participo activamente en
+                proyectos de divulgación, extensión y trabajo con comunidades, así como en la articulación entre
+                universidades, museos y planetarios, con el objetivo de hacer la astronomía más cercana, diversa y
+                accesible.
+            </p>
+            <p>
+                Soy cofundadora de <strong>Colombianas Haciendo Investigación en Astrociencias (CHIA)</strong>, una red
+                que
+                promueve y visibiliza el trabajo de mujeres en las ciencias del espacio, y que busca inspirar a nuevas
+                generaciones —especialmente a niñas y jóvenes— a imaginarse haciendo ciencia.
             </p>
         </div>
     </section>
+
 
     <script src="main.js"></script>
 </body>
