--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <header>
             <span class="image avatar"><img src="images/profile.jpeg" alt="" /></span>
             <h1 id="logo"><a href="#">Lauren Flor-Torres</a></h1>
-            <p>Astrofísica, Docente y Divulgadora</p>
+            <p>Astrofísica, Docente universitaria y Divulgadora</p>
         </header>
         <nav id="nav">
             <ul>
