--- a/courses/astronomia-practica-ii.html
+++ b/courses/astronomia-practica-ii.html
@@ -19,14 +19,14 @@
     <section id="header">
         <header>
             <span class="image avatar"><img src="../images/profile.jpeg" alt="" /></span>
-            <h1 id="logo"><a href="../index.html">Lauren Flor-Torres</a></h1>
+            <h1 id="logo"><a href="../inicio.html">Lauren Flor-Torres</a></h1>
             <p>Astrofísica, Docente y Divulgadora</p>
         </header>
         <nav id="nav">
             <ul>
-                <li><a href="../index.html">Sobre Mí</a></li>
-                <li><a href="../index.html#two" class="active">Cursos</a></li>
-                <li><a href="../index.html#three">Contacto</a></li>
+                <li><a href="../inicio.html">Sobre Mí</a></li>
+                <li><a href="../inicio.html#two" class="active">Cursos</a></li>
+                <li><a href="../inicio.html#three">Contacto</a></li>
             </ul>
         </nav>
         <footer>
