--- a/courses/astronomia-practica-ii.html
+++ b/courses/astronomia-practica-ii.html
@@ -76,6 +76,15 @@
                                 class="button icon solid fa-file-alt" target="_blank">Ver Plan de Asignatura</a></li>
                     </ul>
 
+                    <!-- Organización del Curso -->
+                    <h3>Organización del Curso</h3>
+                    <p>Consulta la programación detallada de las sesiones:</p>
+                    <div class="box">
+                        <iframe
+                            src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRhT4Aeotku1_0OcOirDBCRhEjcsyEf2cu-R-i6TnTzgkBMAnch6y23BkgNOwEmXRd3ztNjqA7Zkopv/pubhtml?gid=852121507&amp;single=true"
+                            width="100%" height="600" frameborder="0"></iframe>
+                    </div>
+
                     <!-- Agenda -->
                     <h3>Agenda de Actividades</h3>
                     <div class="table-wrapper">
