feat: automate evaluation table with exams and reports

--- a/courses/astronomia-practica-ii.html
+++ b/courses/astronomia-practica-ii.html
@@ -117,16 +117,21 @@
                                     <th>Fecha</th>
                                 </tr>
                             </thead>
-                            <tbody>
+                            <tbody id="evaluacion-body">
                                 <tr>
                                     <td>Examen Parcial 1</td>
                                     <td>20%</td>
-                                    <td>26 Mar</td>
+                                    <td>Cargando...</td>
                                 </tr>
                                 <tr>
                                     <td>Examen Final</td>
-                                    <td>30%</td>
-                                    <td>07 Jun</td>
+                                    <td>20%</td>
+                                    <td>Cargando...</td>
+                                </tr>
+                                <tr>
+                                    <td>Informes</td>
+                                    <td>60%</td>
+                                    <td>-</td>
                                 </tr>
                             </tbody>
                         </table>
