Description of changes

--- a/inicio.html
+++ b/inicio.html
@@ -125,7 +125,7 @@
 
                         <!-- 1. Forbes -->
                         <div class="card">
-                            <img src="images/forbes_profile.jpg" alt="Forbes Article" class="card-image">
+                            <img src="images/forbes.jpg" alt="Forbes Article" class="card-image">
                             <div class="card-content">
                                 <h4>Forbes: This Colombian Searches For The Secrets Of Stars With Exoplanets</h4>
                                 <p>Perfil internacional que destaca la investigación en estrellas y exoplanetas, y el
@@ -137,7 +137,7 @@
 
                         <!-- 2. El País -->
                         <div class="card">
-                            <img src="images/media_placeholder.jpg" alt="El País Article" class="card-image">
+                            <img src="images/elpais.jpg" alt="El País Article" class="card-image">
                             <div class="card-content">
                                 <h4>El País: Lauren Flor: “Las mujeres en la astronomía estamos haciendo aportes
                                     valiosos”</h4>
@@ -163,7 +163,7 @@
 
                         <!-- 4. El Espectador -->
                         <div class="card">
-                            <img src="images/media_placeholder.jpg" alt="El Espectador Article" class="card-image">
+                            <img src="images/ElEspectador.jpg" alt="El Espectador Article" class="card-image">
                             <div class="card-content">
                                 <h4>El Espectador: La caleña que estudia las estrellas</h4>
                                 <p>Perfil biográfico sobre el camino recorrido desde Cali hasta la especialización en
@@ -175,7 +175,7 @@
 
                         <!-- 5. El Colombiano -->
                         <div class="card">
-                            <img src="images/media_placeholder.jpg" alt="El Colombiano Article" class="card-image">
+                            <img src="images/elcolombiano.jpg" alt="El Colombiano Article" class="card-image">
                             <div class="card-content">
                                 <h4>El Colombiano: Lauren Flor, docente del pregrado de Astronomía U. de A.</h4>
                                 <p>Reseña sobre la labor docente e investigativa en la Universidad de Antioquia.</p>
