--- a/courses/astronomia-practica-ii.html
+++ b/courses/astronomia-practica-ii.html
@@ -35,6 +35,14 @@
                             class="label">Github</span></a></li>
                 <li><a href="mailto:lauren.flor@udea.edu.co" class="icon solid fa-envelope"><span
                             class="label">Email</span></a></li>
+                <li><a href="https://x.com/lauren_flor" class="icon brands fa-twitter"><span class="label">X</span></a>
+                </li>
+                <li><a href="https://www.instagram.com/laurenm_flort" class="icon brands fa-instagram"><span
+                            class="label">Instagram</span></a></li>
+                <li><a href="https://www.linkedin.com/in/laurenflort/" class="icon brands fa-linkedin-in"><span
+                            class="label">LinkedIn</span></a></li>
+                <li><a href="https://orcid.org/0000-0003-4134-9615" class="icon brands fa-orcid"><span
+                            class="label">ORCID</span></a></li>
             </ul>
         </footer>
     </section>
