--- a/courses/astronomia-practica-ii.html
+++ b/courses/astronomia-practica-ii.html
@@ -176,7 +176,7 @@
                     </div>
 
                     <!-- Prácticas -->
-                    <h3>Prácticas de Campo y Laboratorio</h3>
+                    <h3>Prácticas</h3>
                     <p>Guías de prácticas y espacio para subir tus informes.</p>
                     <div class="features">
                         <article>
@@ -192,7 +192,7 @@
                         </article>
                         <article>
                             <div class="inner">
-                                <h4>Zona de Entrega</h4>
+                                <h4>Entrega de los Informes</h4>
                                 <p>Sube aquí tus informes de práctica y documentos de comentarios en formato PDF.</p>
                                 <ul class="actions stacked">
                                     <li><a href="https://forms.gle/uoBdtdL1Ca97JASv5"
