content: add class 3 presentation link

--- a/courses/astronomia-practica-ii.html
+++ b/courses/astronomia-practica-ii.html
@@ -173,6 +173,18 @@
                                 </ul>
                             </div>
                         </article>
+                        <article>
+                            <div class="inner">
+                                <h4>Clase 3: Telescopios</h4>
+                                <p>Principios, tipos de telescopios y monturas.</p>
+                                <ul class="actions small">
+                                    <li><a href="https://docs.google.com/presentation/d/1wC191QkVCneFap_4dCsHCQ9d57sPE8pNpgmyPT_mp1c/edit?usp=sharing"
+                                            class="button small icon solid fa-download" target="_blank">Ver
+                                            Presentación</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </article>
                     </div>
 
                     <!-- Prácticas -->
