content: update practice list (add P4-P6)

--- a/courses/astronomia-practica-ii.html
+++ b/courses/astronomia-practica-ii.html
@@ -267,16 +267,19 @@
 
                     <!-- Prácticas -->
                     <h3>Prácticas</h3>
-                    <p>Guías de prácticas y espacio para subir tus informes.</p>
+                    <!-- <p>Guías de prácticas y espacio para subir tus informes.</p> -->
                     <div class="features">
                         <article>
                             <div class="inner">
                                 <h4>Guías de Práctica</h4>
                                 <p>Descarga las instrucciones para cada sesión.</p>
                                 <ul class="alt">
-                                    <li><span class="icon solid fa-file-pdf"></span> Guía Práctica 1 (Próximamente)</li>
-                                    <li><span class="icon solid fa-file-pdf"></span> Guía Práctica 2 (Próximamente)</li>
-                                    <li><span class="icon solid fa-file-pdf"></span> Guía Práctica 3 (Próximamente)</li>
+                                    <li><span class="icon solid fa-file-pdf"></span> Práctica 1 (Próximamente)</li>
+                                    <li><span class="icon solid fa-file-pdf"></span> Práctica 2 (Próximamente)</li>
+                                    <li><span class="icon solid fa-file-pdf"></span> Práctica 3 (Próximamente)</li>
+                                    <li><span class="icon solid fa-file-pdf"></span> Práctica 4 (Próximamente)</li>
+                                    <li><span class="icon solid fa-file-pdf"></span> Práctica 5 (Próximamente)</li>
+                                    <li><span class="icon solid fa-file-pdf"></span> Práctica 6 (Próximamente)</li>
                                 </ul>
                             </div>
                         </article>
